--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-gevent==1.0.1
-flask
-flask-socketio
+flask==0.10.1
+flask-socketio==0.3.8
 louie
-
+gevent==1.0.1
+gevent-socketio==0.3.6
+gevent-websocket==0.9.3
