renamed 'src' to 'mxcube3' in order to be able to use the startup script from within code directory (easier for development)
mxcube3 startup script is renamed mxcube3-server to avoid name clash

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "src/HardwareObjects"]
-	path = src/HardwareObjects
+[submodule "mxcube3/HardwareObjects"]
+	path = mxcube3/HardwareObjects
 	url = https://github.com/mxcube/HardwareObjects.git
-[submodule "src/HardwareRepository"]
-	path = src/HardwareRepository
+[submodule "mxcube3/HardwareRepository"]
+	path = mxcube3/HardwareRepository
 	url = https://github.com/mxcube/HardwareRepository.git
