moved files from mxcube3/js to mxcube3/ui directory added node_modules directory in .gitignore added package.json added webpack.config.js added test-samples-list.js: samples data from ISPyB, for testing added SampleGrid.jsx, SampleGrid React component file + css file added main.jsx, new main MXCuBE 3 file added dist/index.html file; modified .gitignore not to ignore this file

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ src/static/build/.module-cache/
 env/
 build/
 develop-eggs/
-dist/
+dist/*
 downloads/
 eggs/
 .eggs/
@@ -56,3 +56,7 @@ docs/_build/
 
 # PyBuilder
 target/
+
+node_modules/
+!dist/index.html
+
