--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-"scripts": {
-  "start": "npm run serve | npm run dev",
-  "serve": "./node_modules/.bin/http-server -p 8080",
-  "dev": "./node_modules/.bin/webpack-dev-server --colors --port 8090 --display-error-details --content-base dist"
-},
-"name": "mxcube3",
-"version": "0.1.0",
-"main": "main.jsx",
-"dependencies": {
-  "react": "0.14.0",
-  "react-dom": "0.14.0",
-  "isotope-layout": "2.2.2",
-  "classnames": "2.2.0",
-  "bootstrap": "3.3.5",
-  "bootstrap-webpack": "0.0.5",
-  "jquery": "2.1.4",
-  "x-editable": "1.5.1"
-},
-"devDependencies": {
-  "webpack": "1.12.2",
-  "webpack-dev-server": "1.12.1",
-  "http-server": "0.8.5",
-  "babel-core": "5.8.29",
-  "babel-loader": "5.3.2",
-  "css-loader": "0.21.0",
-  "style-loader": "0.13.0",
-  "exports-loader": "0.6.2",
-  "extract-text-webpack-plugin": "0.8.2",
-  "file-loader":"0.8.4",
-  "img-loader":"1.2.0",
-  "imports-loader":"0.6.5",
-  "script-loader":"0.6.1",
-  "url-loader":"0.5.6",
-  "json5":"0.4.0",
-  "less":"2.5.3",
-  "less-loader":"2.2.1"
-}
+  "scripts": {
+    "start": "npm run serve | npm run dev",
+    "serve": "./node_modules/.bin/http-server -p 8080",
+    "dev": "./node_modules/.bin/webpack-dev-server --hot --inline --colors --port 8090 --display-error-details --content-base dist"
+  },
+  "name": "mxcube3",
+  "version": "0.1.0",
+  "main": "main.jsx",
+  "dependencies": {
+    "react": "0.14.0",
+    "react-dom": "0.14.0",
+    "isotope-layout": "2.2.2",
+    "classnames": "2.2.0",
+    "bootstrap": "3.3.5",
+    "bootstrap-webpack": "0.0.5",
+    "jquery": "2.1.4",
+    "x-editable": "1.5.1"
+  },
+  "devDependencies": {
+    "babel-core": "5.8.29",
+    "babel-loader": "5.3.2",
+    "css-loader": "0.21.0",
+    "exports-loader": "0.6.2",
+    "extract-text-webpack-plugin": "0.8.2",
+    "file-loader": "0.8.4",
+    "http-server": "0.8.5",
+    "img-loader": "1.2.0",
+    "imports-loader": "0.6.5",
+    "json5": "0.4.0",
+    "less": "2.5.3",
+    "less-loader": "2.2.1",
+    "react-hot-loader": "^1.3.0",
+    "script-loader": "0.6.1",
+    "style-loader": "0.13.0",
+    "url-loader": "0.5.6",
+    "webpack": "1.12.2",
+    "webpack-dev-server": "1.12.1"
+  }
 }
