--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "npm run serve | npm run dev",
     "serve": "./node_modules/.bin/http-server -p 8080",
-    "dev": "./node_modules/.bin/webpack-dev-server --hot --inline --colors --port 8090 --display-error-details --content-base dist"
+    "dev": "./node_modules/.bin/webpack-dev-server --hot --inline --colors --host 0.0.0.0 --port 8090 --display-error-details --content-base dist"
   },
   "name": "mxcube3",
   "version": "0.1.0",
@@ -30,6 +30,7 @@
     "json5": "0.4.0",
     "less": "2.5.3",
     "less-loader": "2.2.1",
+    "react-bootstrap": "^0.27.3",
     "react-hot-loader": "^1.3.0",
     "script-loader": "0.6.1",
     "style-loader": "0.13.0",
