--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "version": "0.1.0",
   "main": "main.jsx",
   "dependencies": {
-    "react": "0.14.2",
-    "react-dom": "0.14.2",
-    "isotope-layout": "2.2.2",
-    "classnames": "2.2.0",
+    "backbone": "^1.2.3",
     "bootstrap": "3.3.5",
     "bootstrap-webpack": "0.0.5",
+    "classnames": "2.2.0",
+    "font-awesome": "^4.4.0",
+    "font-awesome-webpack": "0.0.4",
+    "isotope-layout": "2.2.2",
     "jquery": "2.1.4",
+    "react": "0.14.2",
+    "react-dom": "0.14.2",
+    "underscore": "^1.8.3",
     "x-editable": "1.5.1"
   },
   "devDependencies": {
