Added new packages to npm
Added thunk and logger

--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "font-awesome": "^4.4.0",
     "font-awesome-webpack": "0.0.4",
     "history": "^1.13.1",
+    "isomorphic-fetch": "^2.2.0",
     "isotope-layout": "2.2.2",
     "jquery": "2.1.4",
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4",
     "react-router": "^1.0.0",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.0.4",
+    "redux-thunk": "^1.0.0",
     "underscore": "^1.8.3",
     "x-editable": "1.5.1"
   },
