Added package classname and react-ui-tree
I use the package react-ui-tree for my queue, this is dependent on the classnames package aswell

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "backbone": "^1.2.3",
     "bootstrap": "3.3.5",
     "bootstrap-webpack": "0.0.5",
-    "classnames": "2.2.0",
+    "classnames": "^2.2.0",
     "font-awesome": "^4.4.0",
     "font-awesome-webpack": "0.0.4",
     "history": "^1.13.1",
@@ -22,6 +22,7 @@
     "react-dom": "0.14.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "react-ui-tree": "^2.4.1",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
