--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "2.1.4",
     "react": "0.14.2",
     "react-dom": "0.14.2",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "react-ui-tree": "^2.4.1",
