--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
+    "socket.io-client": "^1.3.7",
     "underscore": "^1.8.3",
     "x-editable": "1.5.1"
   },
