--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "classnames": "^2.2.0",
     "font-awesome": "^4.4.0",
     "font-awesome-webpack": "0.0.4",
-    "history": "^1.13.1",
+    "history": "1.13.x",
     "isomorphic-fetch": "^2.2.0",
     "isotope-layout": "2.2.2",
     "jquery": "2.1.4",
@@ -26,7 +26,7 @@
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
-    "socket.io-client": "^1.3.7",
+    "socket.io-client": "0.9.16",
     "underscore": "^1.8.3",
     "x-editable": "1.5.1"
   },
@@ -49,6 +49,6 @@
     "style-loader": "0.13.0",
     "url-loader": "0.5.6",
     "webpack": "1.12.4",
-    "webpack-dev-server": "1.12.1"
+    "webpack-dev-server": "1.14.0"
   }
 }
