--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "babel-core": "5.8.29",
     "babel-loader": "5.3.2",
     "css-loader": "0.22.0",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.11.3",
     "exports-loader": "0.6.2",
     "extract-text-webpack-plugin": "0.9.1",
     "file-loader": "0.8.4",
