--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "babel-core": "5.8.29",
     "babel-loader": "5.3.2",
     "css-loader": "0.22.0",
+    "esformatter": "^0.8.1",
+    "esformatter-jsx": "^4.0.6",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.3",
@@ -55,5 +57,25 @@
     "url-loader": "0.5.6",
     "webpack": "1.12.4",
     "webpack-dev-server": "1.14.0"
+  },
+  "esformatter": {
+    "plugins": [
+        "esformatter-jsx"
+    ],
+  "jsx": {
+    "formatJSX": true, 
+    "attrsOnSameLineAsTag": false, 
+    "maxAttrsOnTag": 3,
+    "firstAttributeOnSameLine": true,  
+    "alignWithFirstAttribute": false,  
+    "spaceInJSXExpressionContainers": " ", 
+    "htmlOptions": { 
+      "brace_style": "collapse",
+      "indent_char": " ",
+      "indent_size": 4,
+      "max_preserve_newlines": 2,
+      "preserve_newlines": true
+    }
+  }
   }
 }
