--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isomorphic-fetch": "^2.2.0",
     "isotope-layout": "2.2.2",
     "jquery": "2.1.4",
+    "lodash": "^3.10.1",
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-modal": "^0.6.1",
