--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "start": "npm run dev",
     "dev": "./node_modules/.bin/webpack-dev-server --hot --inline --colors --host 0.0.0.0 --port 8090 --display-error-details --content-base mxcube3/ui",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --config webpack.production.config.js",
-    "esformatter": "./node_modules/.bin/esformatter" 
+    "esformatter": "./node_modules/.bin/esformatter"
   },
   "name": "mxcube3",
   "version": "0.1.0",
   "main": "main.jsx",
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
+    "babel-runtime": "^6.3.19",
     "backbone": "^1.2.3",
     "bootstrap": "3.3.5",
     "bootstrap-webpack": "0.0.5",
@@ -19,7 +21,7 @@
     "isomorphic-fetch": "^2.2.0",
     "isotope-layout": "2.2.2",
     "jquery": "2.1.4",
-    "lodash": "^3.10.1",
+    "lodash": "*",
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-modal": "^0.6.1",
@@ -35,8 +37,15 @@
     "x-editable": "1.5.1"
   },
   "devDependencies": {
-    "babel-core": "5.8.29",
-    "babel-loader": "5.3.2",
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.4.0",
+    "babel-polyfill": "^6.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
     "css-loader": "0.22.0",
     "esformatter": "^0.8.1",
     "esformatter-jsx": "^4.0.6",
@@ -45,39 +54,39 @@
     "eslint-plugin-react": "^3.11.3",
     "exports-loader": "0.6.2",
     "extract-text-webpack-plugin": "0.9.1",
-    "file-loader": "0.8.4",
+    "file-loader": "^0.8.4",
     "http-server": "0.8.5",
     "img-loader": "1.2.0",
     "imports-loader": "0.6.5",
     "json5": "0.4.0",
     "less": "2.5.3",
-    "less-loader": "2.2.1",
+    "less-loader": "^2.2.1",
     "react-bootstrap": "^0.27.3",
     "react-hot-loader": "^1.3.0",
     "script-loader": "0.6.1",
     "style-loader": "0.13.0",
-    "url-loader": "0.5.6",
+    "url-loader": "^0.5.6",
     "webpack": "1.12.4",
     "webpack-dev-server": "1.14.0"
   },
   "esformatter": {
     "plugins": [
-        "esformatter-jsx"
+      "esformatter-jsx"
     ],
-  "jsx": {
-    "formatJSX": true, 
-    "attrsOnSameLineAsTag": false, 
-    "maxAttrsOnTag": 3,
-    "firstAttributeOnSameLine": true,  
-    "alignWithFirstAttribute": false,  
-    "spaceInJSXExpressionContainers": " ", 
-    "htmlOptions": { 
-      "brace_style": "collapse",
-      "indent_char": " ",
-      "indent_size": 4,
-      "max_preserve_newlines": 2,
-      "preserve_newlines": true
+    "jsx": {
+      "formatJSX": true,
+      "attrsOnSameLineAsTag": false,
+      "maxAttrsOnTag": 3,
+      "firstAttributeOnSameLine": true,
+      "alignWithFirstAttribute": false,
+      "spaceInJSXExpressionContainers": " ",
+      "htmlOptions": {
+        "brace_style": "collapse",
+        "indent_char": " ",
+        "indent_size": 4,
+        "max_preserve_newlines": 2,
+        "preserve_newlines": true
+      }
     }
-  }
   }
 }
