Set version of redux

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "classnames": "^2.2.0",
     "font-awesome": "^4.4.0",
     "font-awesome-webpack": "0.0.4",
-    "history": "1.13.x",
+    "history": "1.17.x",
     "isomorphic-fetch": "^2.2.0",
     "isotope-layout": "2.2.2",
     "jquery": "2.1.4",
@@ -25,8 +25,8 @@
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-modal": "^0.6.1",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
+    "react-redux": "4.0.6",
+    "react-router": "1.0.3",
     "react-ui-tree": "^2.4.1",
     "redux": "^3.0.4",
     "redux-form": "^3.1.7",
