--- a/package.json
+++ b/package.json
@@ -41,21 +41,17 @@
     "socket.io-client": "0.9.16",
     "underscore": "^1.8.3",
     "x-editable": "1.5.1",
-    "css-loader": "0.17.0",
+    "css-loader": "0.23.1",
     "style-loader": "0.12.3",
     "grunt":"0.4.5"
   },
   "devDependencies": {
-    "babel-core": "^6.4.0",
+    "babel-core": "6.4.0",
     "babel-loader": "^6.2.1",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-plugin-transform-runtime": "^6.4.0",
     "babel-polyfill": "^6.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-preset-stage-2": "^6.3.13",
     "css-loader": "0.22.0",
     "esformatter": "^0.8.1",
     "esformatter-jsx": "^4.0.6",
@@ -73,8 +69,6 @@
     "less-loader": "^2.2.1",
     "react-bootstrap": "^0.27.3",
     "react-hot-loader": "^1.3.0",
-    "react-transform-catch-errors": "^1.0.1",
-    "react-transform-hmr": "^1.0.1",
     "script-loader": "0.6.1",
     "style-loader": "0.13.0",
     "url-loader": "^0.5.6",
