--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
     "start": "npm run dev",
     "dev": "./node_modules/.bin/webpack-dev-server --hot --inline --colors --host 0.0.0.0 --port 8090 --display-error-details --content-base mxcube3/ui",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --config webpack.production.config.js",
-    "esformatter": "./node_modules/.bin/esformatter"
+    "esformatter": "./node_modules/.bin/esformatter",
+    "lint": "eslint . --ext .js --ext .jsx"
   },
   "name": "mxcube3",
-  "description" : "The next version of MxCUBE",
+  "description": "The next version of MxCUBE",
   "version": "0.1.0",
-  "repository" :
-  { "type" : "git"
-  , "url" : "https://github.com/mxcube/mxcube3"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mxcube/mxcube3"
   },
-  "license" : "MIT",
+  "license": "MIT",
   "main": "main.jsx",
   "dependencies": {
     "babel-polyfill": "^6.3.14",
@@ -43,10 +44,11 @@
     "x-editable": "1.5.1",
     "css-loader": "0.23.1",
     "style-loader": "0.12.3",
-    "grunt":"0.4.5"
+    "grunt": "0.4.5"
   },
   "devDependencies": {
     "babel-core": "6.4.0",
+    "babel-eslint": "^4.1.8",
     "babel-loader": "^6.2.1",
     "babel-polyfill": "^6.0.0",
     "babel-preset-es2015": "^6.3.13",
@@ -56,8 +58,8 @@
     "esformatter": "^0.8.1",
     "esformatter-jsx": "^4.0.6",
     "eslint": "^1.10.3",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint-loader": "^1.2.1",
+    "eslint-plugin-react": "^3.16.1",
     "exports-loader": "0.6.2",
     "extract-text-webpack-plugin": "0.9.1",
     "file-loader": "^0.8.4",
