--- a/package.json
+++ b/package.json
@@ -18,38 +18,38 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
-    "backbone": "^1.2.3",
     "bootstrap": "3.3.5",
     "bootstrap-webpack": "0.0.5",
     "classnames": "^2.2.0",
+    "css-loader": "0.23.1",
     "font-awesome": "^4.4.0",
     "font-awesome-webpack": "0.0.4",
+    "grunt": "0.4.5",
     "history": "1.17.x",
     "isomorphic-fetch": "^2.2.0",
     "isotope-layout": "2.2.2",
-    "jquery": "2.1.4",
     "lodash": "4.0.0",
     "react": "0.14.2",
+    "react-dnd": "^2.1.2",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "0.14.2",
     "react-modal": "^0.6.1",
     "react-redux": "4.0.6",
     "react-router": "1.0.3",
-    "react-ui-tree": "2.5.0",
     "redux": "^3.0.4",
     "redux-form": "^3.1.7",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
     "socket.io-client": "0.9.16",
-    "underscore": "^1.8.3",
-    "x-editable": "1.5.1",
-    "css-loader": "0.23.1",
     "style-loader": "0.12.3",
-    "grunt": "0.4.5"
+    "underscore": "^1.8.3",
+    "x-editable": "1.5.1"
   },
   "devDependencies": {
     "babel-core": "6.4.0",
     "babel-eslint": "^4.1.8",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
