--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "history": "1.17.x",
     "isomorphic-fetch": "^2.2.0",
     "isotope-layout": "2.2.2",
+    "jquery": "^2.2.1",
     "lodash": "4.0.0",
     "react": "0.14.2",
     "react-dnd": "^2.1.2",
