--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
+    "bluebird": "^3.3.5",
     "bootstrap": "3.3.5",
     "bootstrap-webpack": "0.0.5",
     "classnames": "^2.2.0",
