--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,11 @@
     "react/no-did-update-set-state": 1,
     "react/no-direct-mutation-state": 1,
     "react/no-set-state": 1,
+    "react/prop-types": 0,
+    "comma-dangle": 0,
+    "indent": 0,
+    "quotes": 0,
+    "semi": 0,
     // "react/no-unknown-property": 1,
     // "react/prefer-es6-class": 1,
     // "react/react-in-jsx-scope": 1,
