--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^2.2.1",
     "lodash": "4.0.0",
     "react": "0.14.2",
+    "react-bootstrap-switch": "^3.4.5",
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "0.14.2",
