--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt": "0.4.5",
     "history": "1.17.x",
     "isomorphic-fetch": "^2.2.0",
+    "isotope-cells-by-row": "^1.1.3",
     "isotope-layout": "2.2.2",
     "jquery": "^2.2.1",
     "lodash": "4.0.0",
