--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     "react/no-direct-mutation-state": 1,
     "react/no-set-state": 1,
     "react/prefer-stateless-function": 0,
+    "func-names": 0,
     // "react/no-unknown-property": 1,
     // "react/prefer-es6-class": 1,
     // "react/react-in-jsx-scope": 1,
