--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "0.14.2",
     "react-redux": "4.0.6",
     "react-router": "1.0.3",
+    "react-sticky": "^5.0.3",
     "redux": "^3.0.4",
     "redux-form": "^3.1.7",
     "redux-logger": "^2.0.4",
