--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "grunt": "0.4.5",
     "history": "1.17.x",
     "isomorphic-fetch": "^2.2.0",
-    "isotope-cells-by-row": "^1.1.3",
-    "isotope-layout": "2.2.2",
     "jquery": "^2.2.1",
     "lodash": "4.0.0",
     "react": "15.4.2",
@@ -41,6 +39,7 @@
     "react-redux": "4.0.6",
     "react-router": "1.0.3",
     "react-sticky": "^5.0.3",
+    "react-stonecutter": "^0.3.4",
     "redux": "^3.0.4",
     "redux-form": "^3.1.7",
     "redux-logger": "^2.0.4",
