--- a/package.json
+++ b/package.json
@@ -18,39 +18,34 @@
   "license": "MIT",
   "main": "main.jsx",
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "babel-runtime": "^6.3.19",
     "bootstrap": "3.3.5",
     "bootstrap-webpack": "0.0.5",
     "classnames": "^2.2.0",
-    "css-loader": "0.23.1",
+    "everpolate": "0.0.3",
     "font-awesome": "^4.4.0",
     "font-awesome-webpack": "0.0.4",
-    "grunt": "0.4.5",
     "history": "1.17.x",
     "isomorphic-fetch": "^2.2.0",
     "lodash": "4.0.0",
     "react": "15.4.2",
+    "react-bootstrap": "^0.27.3",
     "react-bootstrap-switch": "^3.4.5",
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.4.2",
-    "react-redux": "4.0.6",
+    "react-redux": "^5.0.2",
     "react-router": "1.0.3",
     "react-sticky": "^5.0.3",
     "react-stonecutter": "^0.3.4",
     "redux": "^3.0.4",
-    "redux-form": "^3.1.7",
+    "redux-form": "5.3.4",
     "redux-logger": "^2.0.4",
     "redux-persist": "^3.0.3",
     "redux-persist-crosstab": "^3.0.0",
     "redux-thunk": "^2.0.0",
     "shortid": "^2.2.6",
     "socket.io-client": "1.4.5",
-    "style-loader": "0.12.3",
-    "underscore": "^1.8.3",
-    "x-editable": "1.5.1",
-    "everpolate": "0.0.3"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "6.4.0",
@@ -58,11 +53,12 @@
     "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.0.0",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.3.13",
-    "css-loader": "0.22.0",
+    "babel-runtime": "^6.3.19",
+    "css-loader": "0.23.1",
     "enzyme": "^2.7.0",
     "esformatter": "^0.8.1",
     "esformatter-jsx": "^4.0.6",
@@ -82,8 +78,7 @@
     "json5": "0.4.0",
     "less": "2.5.3",
     "less-loader": "^2.2.3",
-    "react-bootstrap": "^0.27.3",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.4.2",
     "script-loader": "0.6.1",
     "style-loader": "0.13.0",
