--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.4.2",
     "react-redux": "4.0.6",
-    "react-router": "1.0.3",
+    "react-router": "^3.0.2",
     "react-sticky": "^5.0.3",
     "react-stonecutter": "^0.3.4",
     "redux": "^3.0.4",
