--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "main": "main.jsx",
   "dependencies": {
     "bootstrap": "3.3.5",
-    "react-bootstrap": "^0.27.3",
     "classnames": "^2.2.0",
     "everpolate": "0.0.3",
     "font-awesome": "^4.4.0",
@@ -27,10 +26,11 @@
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^4.0.0",
     "react": "15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.4.2",
-    "react-redux": "4.0.6",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
     "react-sticky": "^5.0.3",
