--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "15.4.2",
     "react-redux": "4.0.6",
     "react-router": "^3.0.2",
+    "react-router-bootstrap": "^0.23.1",
     "react-sticky": "^5.0.3",
     "react-stonecutter": "^0.3.4",
     "redux": "^3.0.4",
