--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.0.0",
     "react": "15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-table": "^3.1.1",
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.4.2",
