--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "bootstrap": "3.3.5",
     "classnames": "^2.2.0",
-    "css-loader": "0.23.1",
     "everpolate": "0.0.3",
     "font-awesome": "^4.4.0",
     "history": "1.17.x",
@@ -30,8 +29,6 @@
     "react": "15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-contextmenu": "^2.3.0",
-    "react-bootstrap-switch": "^3.4.5",
-    "react-clipboard.js": "^1.0.1",
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.4.2",
@@ -48,10 +45,8 @@
     "redux-thunk": "^2.0.0",
     "shortid": "^2.2.6",
     "socket.io-client": "1.4.5",
-    "underscore": "^1.8.3"
-    "style-loader": "0.12.3",
     "underscore": "^1.8.3",
-    "x-editable": "1.5.1"
+    "react-clipboard.js": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "6.4.0",
