--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-bootstrap": "^0.23.1",
     "react-sticky": "^5.0.3",
     "react-stonecutter": "^0.3.4",
+    "react-draggable": "^2.2.6",
     "redux": "^3.0.4",
     "redux-form": "^6.5.0",
     "redux-logger": "^2.0.4",
