--- a/package.json
+++ b/package.json
@@ -19,75 +19,75 @@
   "main": "main.jsx",
   "dependencies": {
     "bootstrap": "3.3.5",
-    "classnames": "^2.2.0",
+    "classnames": "2.2.5",
     "everpolate": "0.0.3",
-    "font-awesome": "^4.4.0",
-    "history": "1.17.x",
-    "isomorphic-fetch": "^2.2.0",
-    "jsmpeg": "^1.0.0",
-    "liform-react": "^0.5.15",
-    "lodash": "^4.0.0",
-    "react": "15.4.2",
-    "react-bootstrap": "^0.30.7",
-    "react-bootstrap-table": "^3.1.1",
-    "react-contextmenu": "^2.3.0",
-    "react-dnd": "^2.1.2",
-    "react-dnd-html5-backend": "^2.1.2",
+    "font-awesome": "4.7.0",
+    "history": "1.17.0",
+    "isomorphic-fetch": "2.2.1",
+    "jsmpeg": "1.0.0",
+    "liform-react": "0.5.15",
+    "lodash": "4.17.4",
+    "react": "15.5.0",
+    "react-bootstrap": "0.30.10",
+    "react-bootstrap-table": "3.3.3",
+    "react-contextmenu": "2.5.1",
+    "react-dnd": "2.3.0",
+    "react-dnd-html5-backend": "2.3.0",
     "react-dom": "15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
-    "react-router-bootstrap": "^0.23.1",
-    "react-sticky": "^5.0.3",
-    "react-stonecutter": "^0.3.4",
-    "react-draggable": "^2.2.6",
-    "redux": "^3.0.4",
-    "redux-form": "^6.5.0",
-    "redux-logger": "^2.0.4",
-    "redux-persist": "^3.0.3",
-    "redux-persist-crosstab": "^3.0.0",
-    "redux-thunk": "^2.0.0",
-    "shortid": "^2.2.6",
+    "react-redux": "5.0.4",
+    "react-router": "3.0.5",
+    "react-router-bootstrap": "0.23.3",
+    "react-sticky": "5.0.8",
+    "react-stonecutter": "0.3.4",
+    "react-draggable": "2.2.6",
+    "redux": "3.6.0",
+    "redux-form": "6.6.3",
+    "redux-logger": "2.10.2",
+    "redux-persist": "3.5.0",
+    "redux-persist-crosstab": "3.5.2",
+    "redux-thunk": "2.2.0",
+    "shortid": "2.2.8",
     "socket.io-client": "1.4.5",
-    "underscore": "^1.8.3",
-    "react-clipboard.js": "^1.1.1"
+    "underscore": "1.8.3",
+    "react-clipboard.js": "1.1.1"
   },
   "devDependencies": {
     "babel-core": "6.4.0",
-    "babel-eslint": "^6.0.4",
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.0.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.3.13",
-    "css-loader": "^0.23.1",
-    "enzyme": "^2.7.0",
-    "esformatter": "^0.8.1",
-    "esformatter-jsx": "^4.0.6",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-loader": "^1.2.1",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^4.3.0",
-    "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.8.4",
+    "babel-eslint": "6.1.2",
+    "babel-jest": "18.0.0",
+    "babel-loader": "6.4.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "css-loader": "0.23.1",
+    "enzyme": "2.8.2",
+    "esformatter": "0.8.2",
+    "esformatter-jsx": "4.1.4",
+    "eslint": "2.13.1",
+    "eslint-config-airbnb": "7.0.0",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-jsx-a11y": "0.6.2",
+    "eslint-plugin-react": "4.3.0",
+    "exports-loader": "0.6.4",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.8.5",
     "font-awesome-webpack2": "0.0.6",
     "http-server": "0.8.5",
-    "image-webpack-loader": "^1.8.0",
+    "image-webpack-loader": "1.8.0",
     "img-loader": "1.2.0",
-    "imports-loader": "^0.6.5",
-    "jest": "^18.1.0",
+    "imports-loader": "0.6.5",
+    "jest": "18.1.0",
     "json5": "0.4.0",
     "less": "2.5.3",
-    "less-loader": "^2.2.3",
-    "react-hot-loader": "^1.3.0",
-    "react-test-renderer": "^15.4.2",
-    "resolve-url-loader": "^2.0.0",
+    "less-loader": "2.2.3",
+    "react-hot-loader": "1.3.1",
+    "react-test-renderer": "15.5.4",
+    "resolve-url-loader": "2.0.2",
     "script-loader": "0.6.1",
-    "style-loader": "^0.12.3",
-    "url-loader": "^0.5.7",
+    "style-loader": "0.12.4",
+    "url-loader": "0.5.8",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.4.1"
   },
