--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "redux-persist-crosstab": "^3.0.0",
     "redux-thunk": "^2.0.0",
     "shortid": "^2.2.6",
-    "socket.io-client": "1.4.5",
+    "socket.io-client": "^1.4.5",
     "underscore": "^1.8.3",
     "react-clipboard.js": "^1.1.1"
   },
