implementation of plotting facility and plots display
(based on Dygraphs javascript library)

How does it work? There is a new 'plotting' hardware object, to be specified
with -p in mxcube3-server command line (defaults to '/plotting').
Any hardware object that can emit the following signals is a plotting
hardware object:
* new_plot, signal argument: a dictionary like { "title": "plot title", "labels": ["x", "y1", ..., "yn"], "id": "plot_identifier (number?)" }
* plot_data, signal argument: a dictionary like { "id": "plot_identifier", "data": a list of lists, see below }
    - data format is [ [x0, y01, y02, ..., y0n], [x1, y11, ... y1n] ]
    - data should always be have the whole data from the start; it will be automatically sent in pieces with a rate limitation for the messages, this is done by the server itself (in signals.py)
* plot_end, signal argument: dictionary like { "id": "plot_identifier", "data": the whole scan data with the right format }

There is a new 'Plot1D' react component for the UI; when it is placed in
a container, it will automatically receive plots from hardware objects
and display them. It is also possible to specify which particular plot to
display via the following properties:
* autoNext: automatically display subsequent plots (default: True)
* plotId: to specify a particular plot to be displayed
* displayedPlotCallback: function, useful for the parent component to know which plot is currently being displayed; the function receives the plotId

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bootstrap": "3.3.5",
     "classnames": "^2.2.0",
+    "dygraphs": "^2.0.0",
     "everpolate": "0.0.3",
     "font-awesome": "^4.4.0",
     "history": "1.17.x",
