--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
+  "presets": [["env", { "targets": [ { "browsers": ">= 5%" } ], "modules": false }], "react", "stage-0"],
   "plugins": [
-    "transform-class-properties",
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    "transform-class-properties"
   ]
 }
