--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "dev": "./node_modules/.bin/webpack-dev-server",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --config webpack.production.config.js && cp mxcube3/ui/index.html mxcube3/static/",
     "esformatter": "./node_modules/.bin/esformatter",
-    "lint": "eslint . --ext .js --ext .jsx",
-    "postinstall": "npm install fabric@^1.7.7 --no-optional",
-    "test": "jest"
+    "lint": "eslint . --ext .js --ext .jsx"
   },
   "name": "mxcube3",
   "description": "The next version of MxCUBE",
@@ -22,6 +20,7 @@
     "classnames": "^2.2.0",
     "dygraphs": "^2.0.0",
     "everpolate": "0.0.3",
+    "fabric": "^1.7.19",
     "font-awesome": "^4.4.0",
     "history": "1.17.x",
     "isomorphic-fetch": "^2.2.0",
@@ -53,17 +52,16 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-core": "6.4.0",
+    "ajv": "5.2.3",
+    "babel-core": "^6.4.0",
     "babel-eslint": "^6.0.4",
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.1",
+    "babel-loader": "^7.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.0.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.7.0",
     "esformatter": "^0.8.1",
     "esformatter-jsx": "^4.0.6",
     "eslint": "^2.8.0",
@@ -72,25 +70,24 @@
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
     "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.8.4",
     "font-awesome-webpack2": "0.0.6",
     "http-server": "0.8.5",
-    "image-webpack-loader": "^1.8.0",
-    "img-loader": "1.2.0",
-    "imports-loader": "^0.6.5",
-    "jest": "^18.1.0",
+    "image-webpack-loader": "^3.4.2",
+    "imagemin-gifsicle": "^5.2.0",
+    "imagemin-pngquant": "^5.0.1",
     "json5": "0.4.0",
     "less": "2.5.3",
     "less-loader": "^2.2.3",
     "react-hot-loader": "^1.3.0",
-    "react-test-renderer": "^15.4.2",
     "resolve-url-loader": "^2.0.0",
     "script-loader": "0.6.1",
     "style-loader": "^0.12.3",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.7",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.4.1"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.0"
   },
   "esformatter": {
     "plugins": [
