--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.4.2",
     "react-draggable": "^2.2.6",
+    "react-iframe": "^1.1.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
