Running travis with Python3.6 and 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "2.7"
+  - "3.6"
+  - "3.7"
 
 node_js:
   - "10"
@@ -16,7 +18,9 @@ before_install:
 install:
   - npm install
   - npm run build
-  - pip install -r requirements.txt
+
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then travis_retry pip install -r requirements.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '3'* ]]; then travis_retry pip install -r requirements-py3.txt; fi
 
 script:
   - python -m pytest
