--- a/requirements-pip3.txt
+++ b/requirements-pip3.txt
@@ -1,10 +1,11 @@
 gevent==1.3.7
 greenlet==0.4.16
 flask
-flask-socketio
+flask-socketio==4
 gevent-websocket
 Flask-Session
-python-socketio
+python-socketio==4
+python-engineio==3
 louie-latest
 redis
 scipy
