--- a/requirements-pip3.txt
+++ b/requirements-pip3.txt
@@ -1,11 +1,11 @@
 gevent==1.3.7
 greenlet==0.4.16
 flask
-flask-socketio==4
+flask-socketio>=4
 gevent-websocket
 Flask-Session
-python-socketio==4
-python-engineio==3
+python-socketio>=4
+python-engineio>=3.2.0
 louie-latest
 redis
 scipy
