--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,7 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "react-sticky": "^6.0.3",
     "react-stonecutter": "^0.3.9",
     "redux": "4.1.2",
@@ -56,6 +57,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "shortid": "^2.2.6",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^2.3.0",
     "underscore": "^1.8.3",
     "web-vitals": "^2.1.4",
